--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,3 +23,18 @@ header nav ul li a {
   font-weight: lighter;
   font-size: 30px;
 }
+
+/*about me section*/
+p {
+  font-size: 20px;
+  font-family: 'Times New Roman', Times, serif;
+  text-align: justify;
+}
+
+img {
+  float: right; 
+  padding: 15px;
+}
+
+/*work section*/
+/*contact info section*/
