--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,6 +129,13 @@ img {
   padding: 0px;
 }
 
+.text-box {
+  font-size: 5px;
+  background-color: #3795BE; 
+  text-align: center;
+  display: block;
+}
+
 .section-title {
   font-size: 30px;
   text-align: center;
@@ -146,4 +153,57 @@ img {
   font-size: 20px;
   justify-content: space-evenly;
   flex-wrap: wrap;
+}
+
+/*Responsive coding starts here*/
+.responsive {
+  width: 100%;
+  height: auto;
+}
+
+@media screen and (max-width: 980px) {
+header {
+  padding-bottom: 0;
+  justify-content: center;
+  position: relative
+}
+
+header h1 {
+  width: 100%;
+  text-align: center;
+}
+
+header nav ul {
+  margin-top: 20px;
+  width: 100%;
+  justify-content: center;
+}
+
+header nav ul li a {
+  font-size: 20px;
+}
+
+footer h2, footer div {
+  text-align: center;
+  width: 100%;
+}
+}
+
+p {
+  font-size: 2vw;
+}
+.section-title {
+  width: 80%;
+}
+
+.section-title {
+  width: 95%;
+}
+
+.contact-info {
+  text-align: center;
+}
+
+.contact-info > * {
+  flex: 0 100%;
 }
