--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,7 +115,7 @@ img {
   padding: 0px;
 }
 
-.OC img {
+.MB img {
   border-style: solid;
   border-width: 5px;
   border-color: darkblue;
@@ -130,7 +130,7 @@ img {
 }
 
 .text-box {
-  font-size: 5px;
+  font-size: 15px;
   background-color: #3795BE; 
   text-align: center;
   display: block;
